# poetry-toplevel-test

./: LICENSE  README.md  pyproject.toml
